--- a/CSS/Galleri.css
+++ b/CSS/Galleri.css
@@ -2,6 +2,9 @@
 body{
     margin: 0;
     font-family: Arial, sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 html {
@@ -210,6 +213,7 @@ html {
 }
 footer {
     background-color: #161616;
+    margin-top: auto;
 }
 footer h3{
     font-size: 2vw;
