--- a/CSS/Kontakt.css
+++ b/CSS/Kontakt.css
@@ -2,6 +2,9 @@ body{
     margin: 0;
     font-family: Arial, sans-serif;
     color: #f0f0f0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 html {
@@ -173,6 +176,7 @@ textarea {
 }
 footer {
     background-color: #161616;
+    margin-top: auto;
 }
 footer h3{
     font-size: 2vw;
