--- a/CSS/Prisliste.css
+++ b/CSS/Prisliste.css
@@ -3,6 +3,9 @@ body{
     margin: 0;
     font-family: Arial, sans-serif;
     color: #f0f0f0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 html {
@@ -160,6 +163,7 @@ li{
 }
 footer {
     background-color: #161616;
+    margin-top: auto;
 }
 footer h3{
     font-size: 2vw;
